[package]
name = "httpstatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["http1", "server", "runtime"] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
